--- a/index.html
+++ b/index.html
@@ -4,26 +4,34 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Invitation - Bob & Gertrude</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Georgia', serif;
-      background: #f7f4f1;
+      font-family: 'Playfair Display', serif;
+      background: #fdf8f4;
       color: #333;
       text-align: center;
+      animation: fadeIn 2s ease-in;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
     header {
-      background: #d8cfc4;
-      padding: 2em;
+      background: #e4dcd3;
+      padding: 3em 1em;
     }
     h1 {
-      font-size: 2.5em;
-      margin: 0.5em 0;
+      font-family: 'Great Vibes', cursive;
+      font-size: 3em;
+      margin: 0;
+      color: #a9746e;
     }
     .quote {
       font-style: italic;
-      color: #555;
+      color: #6c5c54;
       margin-top: 1em;
     }
     section {
@@ -34,26 +42,55 @@
       line-height: 1.8em;
     }
     .rsvp {
-      background: #e8e1da;
+      background: #f0eae2;
       padding: 2em;
+    }
+    input, textarea {
+      padding: 10px;
+      margin: 10px 0;
+      width: 80%;
+      max-width: 400px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-family: 'Playfair Display', serif;
+    }
+    button {
+      padding: 10px 20px;
+      background-color: #a9746e;
+      color: white;
+      border: none;
+      border-radius: 20px;
+      font-size: 1em;
+      cursor: pointer;
     }
     footer {
       margin-top: 2em;
       font-size: 0.9em;
       color: #999;
+      padding-bottom: 2em;
+    }
+    .heart {
+      font-size: 2em;
+      color: #e25555;
+      animation: heartbeat 1.5s infinite;
+    }
+    @keyframes heartbeat {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.2); }
     }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>Bob Mupier & Gertrude Lunula</h1>
-  <p class="quote">"Deux âmes, une seule pensée ; deux cœurs, un seul amour."</p>
+  <h1>Bob & Gertrude</h1>
+  <div class="heart">♥</div>
+  <p class="quote">"Notre histoire commence ici, entourés d'amour, de rires et de promesses."</p>
 </header>
 
 <section>
   <div class="info">
-    <h2>Vous êtes cordialement invités à notre mariage civil</h2>
+    <h2>Invitation au mariage civil</h2>
     <p><strong>Date :</strong> Samedi 3 mai 2025</p>
     <p><strong>Heure :</strong> 11h30</p>
     <p><strong>Lieu :</strong> 5e rue Limete Industriel, n°11<br>Chez les Pères Capucins</p>
@@ -62,20 +99,21 @@
 </section>
 
 <section class="rsvp">
-  <h2>RSVP</h2>
-  <p>Merci de confirmer votre présence au :</p>
-  <p><strong>+243 970 730 370</strong></p>
+  <h2>Confirmer votre présence</h2>
+  <form action="https://formsubmit.co/gertrudelunula@gmail.com" method="POST">
+    <input type="hidden" name="_cc" value="ayi_eta@yahoo.fr">
+    <input type="hidden" name="_subject" value="Nouvelle confirmation RSVP - Mariage Bob & Gertrude">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="text" name="Nom" placeholder="Votre nom" required><br>
+    <input type="number" name="Nombre de personnes" placeholder="Nombre de personnes" required><br>
+    <textarea name="Message" placeholder="Laisser un message (optionnel)"></textarea><br>
+    <button type="submit">Envoyer</button>
+  </form>
 </section>
 
 <footer>
-  <p>Nous avons hâte de partager ce moment inoubliable avec vous 💕</p>
+  <p>Merci de faire partie de notre histoire ✨</p>
 </footer>
 
 </body>
 </html>
-
-<audio autoplay loop>
-  <source src="musique-douce.mp3" type="audio/mpeg">
-  Votre navigateur ne supporte pas l'audio.
-</audio>
-
