--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     body {
       margin: 0;
       font-family: 'Georgia', serif;
-      background: url('rings-bg.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background-color: #fefefe;
       color: #333;
       overflow-x: hidden;
+    }
+
+    #page1 {
+      background: url('A_wedding_invitation_digital_graphic_design_for_Bo.png') no-repeat center center;
+      background-size: cover;
+      color: white;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
     }
 
     section {
@@ -90,7 +96,7 @@
   <section id="page3" class="hidden fade-in">
     <h2>Confirmez votre présence</h2>
 
-    <form id="rsvpForm" action="https://formsubmit.co/gertrudelunula@gmail.com" method="POST" onsubmit="return handleSubmit(event)">
+    <form id="rsvpForm" action="https://formsubmit.co/gertrudelunula@gmail.com,ayi_eta@yahoo.fr" method="POST" onsubmit="return handleSubmit(event)">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_template" value="table">
       <input type="hidden" name="_autoresponse" value="Merci pour votre confirmation, à très bientôt.">
