--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
   </section>
 
   <section id="page2" class="hidden fade-in">
-    <h1>Bienvenue à notre mariage civil</h1>
+    <h1>Bienvenue à notre marriage civil</h1>
     <p>Nous serions honorés de partager ce moment unique avec vous.</p>
     <p><strong>Date :</strong> 3 mai 2025 à 11h30</p>
-    <p><strong>Lieu :</strong> 5e rue Limete Industriel n°11 chez les Pères Capucins</p>
+    <p><strong>Lieu :</strong> 5e rue Limete Industriel n°11 chez le Père Capucins</p>
     <p><strong>Code vestimentaire :</strong> Chic en couleur</p>
     <button onclick="showPage('page3')">→ Confirmer votre présence</button>
   </section>
