--- a/invitation_mariage.html
+++ b/invitation_mariage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Invitation de Mariage</title>
+  <title>Invitation de Marriage</title>
   <style>
     body {
       margin: 0;
@@ -16,7 +16,7 @@
     #page1 {
       background: url('A_wedding_invitation_digital_graphic_design_for_Bo.png') no-repeat center center;
       background-size: cover;
-      color: white;
+      color: black;
       text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
     }
 
@@ -90,17 +90,18 @@
   </section>
 
   <section id="page2" class="hidden fade-in">
-    <h1>Bienvenue à notre mariage civil</h1>
+    <h1>Bienvenue à notre marriage civil</h1>
     <p>Nous serions honorés de partager ce moment unique avec vous.</p>
     <p><strong>Date :</strong> 3 mai 2025 à 11h30</p>
-    <p><strong>Lieu :</strong> 5e rue Limete Industriel n°11 chez les Pères Capucins</p>
+    <p><strong>Lieu :</strong> 5e rue Limete Industriel n°11 chez le Père Capucins</p>
     <p><strong>Code vestimentaire :</strong> Chic en couleur</p>
     <button onclick="showPage('page3')">→ Confirmer votre présence</button>
   </section>
 
   <section id="page3" class="hidden fade-in">
     <h2>Confirmez votre présence</h2>
-    <form id="rsvpForm" action="https://formsubmit.co/gertrudelunula@gmail.com,ayi_eta@yahoo.fr" method="POST" onsubmit="return handleSubmit(event)">
+    <form id="rsvpForm" action="https://formsubmit.co/gertrudelunula@gmail.com" method="POST" onsubmit="return handleSubmit(event)">
+      <input type="hidden" name="_cc" value="ayi_eta@yahoo.fr">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_template" value="table">
       <input type="hidden" name="_autoresponse" value="Merci pour votre confirmation, à très bientôt.">
