--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <section id="page3" class="hidden fade-in">
     <h2>Confirmez votre présence</h2>
-    <form id="rsvpForm" onsubmit="handleSubmit(event)">
+    <form id="rsvpForm" action="https://formsbmit.co/gertrudelunula@gmail.com" method="Post"  onsubmit="return handleSubmit(event)">
       <input type="text" id="nom" placeholder="Votre nom" required />
       <input type="number" id="nombre" placeholder="Nombre de personnes" required />
       <textarea id="message" rows="3" placeholder="Un petit mot si vous le souhaitez..."></textarea>
