--- a/Invitation_C1.html
+++ b/Invitation_C1.html
@@ -90,7 +90,7 @@
   <!-- Page 3 -->
   <section id="page3" class="hidden fade-in">
     <h2>Confirmez votre présence</h2>
-    <form id="rsvpForm" action="https://formsubmit.co/gertrudelunula@gmail.com" method="POST" onsubmit="return handleForm()">
+    <form action="https://formsubmit.co/tonemail@example.com" method="POST" onsubmit="playSound(); showConfirmationMessage(); return false;">
       <input type="text" name="Nom" placeholder="Votre nom" required />
       <input type="number" name="Nombre de personnes" placeholder="Nombre de personnes" required />
       <textarea name="Message" rows="3" placeholder="Un petit mot si vous le souhaitez..."></textarea>
