--- a/Invitation_C1.html
+++ b/Invitation_C1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Invitation de Mariage</title>
+  <title>Invitation de Marriage</title>
   <style>
     body {
       margin: 0;
@@ -79,10 +79,10 @@
 
   <!-- Page 2 -->
   <section id="page2" class="hidden fade-in">
-    <h1>Bienvenue à notre mariage civil</h1>
+    <h1>Bienvenue à notre marriage civil</h1>
     <p>Nous serions honorés de partager ce moment unique avec vous.</p>
     <p><strong>Date :</strong> 3 mai 2025 à 11h30</p>
-    <p><strong>Lieu :</strong> 5e rue Limete Industriel n°11 chez les Pères Capucins</p>
+    <p><strong>Lieu :</strong> 5e rue Limete Industriel n°11 chez le Père Capucins</p>
     <p><strong>Code vestimentaire :</strong> Chic en couleur</p>
     <button onclick="showPage('page3')">→ Confirmer votre présence</button>
   </section>
